--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,9 @@ img:hover {
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
-body{
-  font-size: 60px;
+form{
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-right: 150px;
+    margin-left: 80px;
 }
